--- a/other/web_server/nginx/nginx.conf
+++ b/other/web_server/nginx/nginx.conf
@@ -103,7 +103,7 @@ http {
 	# JamesKid add virtual host   2014_1_4_18_5
 	server {
 		listen       80;
-		server_name  www.myphp.com;
+		server_name  www.zsjccc.com;
 		location / {
 			root   /var/www/zsjweb;
 			index   zsj.html index.html index.htm index.php zsj.php;
@@ -117,7 +117,32 @@ http {
         }
 	}
 
+	server {
+		listen       80;
+		server_name  www.linuxduxcms.com;
+		location / {
+			root   /var/www/duxcms;
+			index   zsj.html index.html index.htm index.php zsj.php;
+			  #if (-f $request_filename/index.html){
+			  #    rewrite (.*) $1/index.html break;
+			  #}
+			  #if (-f $request_filename/index.php){
+			  #    rewrite (.*) $1/index.php;
+			  #}
+			  # make by JamesKid add duxcms rewrite
+			  if (!-f $request_filename){
+			      rewrite (.*) /index.php;
+			  }
+			  #rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+		}
 
+        location ~ \.php$ {
+            root           /var/www/duxcms;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index  index.php;
+			include		   fcgi.conf;
+        }
+	}
 
     # HTTPS server
     #
