--- a/other/web_server/nginx/nginx.conf
+++ b/other/web_server/nginx/nginx.conf
@@ -1,6 +1,7 @@
 #Admin     :JamesKid
 #History   2014_1_4_18_06   add virtual host 
 #		   2014_1_4_18_07   add php fastcgi
+#		   2014_1_8_14_28   add /admin duxcms backgroundsystem path
 #
 #user  nobody;
 worker_processes  1;
@@ -100,7 +101,9 @@ http {
 	
 	# another virtual host using mix of IP-, name-, and port-based configuration
     #
-	# JamesKid add virtual host   2014_1_4_18_5
+	# Auther:  JamesKid 
+	# History: 2014_1_4_18_5	add virtual host   
+	#          2014_1_8_14_10  	add /admin host to the backgrond system
 	server {
 		listen       80;
 		server_name  www.zsjccc.com;
@@ -122,7 +125,7 @@ http {
 		server_name  www.linuxduxcms.com;
 		location / {
 			root   /var/www/duxcms;
-			index   zsj.html index.html index.htm index.php zsj.php;
+			index   index.php zsj.php;
 			  #if (-f $request_filename/index.html){
 			  #    rewrite (.*) $1/index.html break;
 			  #}
@@ -133,15 +136,26 @@ http {
 			  if (!-f $request_filename){
 			      rewrite (.*) /index.php;
 			  }
+			  #
 			  #rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+			  #
+		}
+		location /admin {
+			root /var/www/duxcms;
+			index index.php index.html;
+
+			if (!-f $request_filename){
+			      rewrite (.*) /admin/index.php;
+			}
 		}
 
         location ~ \.php$ {
-            root           /var/www/duxcms;
+            root           /var/www/duxcms ;
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
 			include		   fcgi.conf;
         }
+
 	}
 
     # HTTPS server
