add nginx duxcms install path

--- a/other/web_server/nginx/nginx.conf
+++ b/other/web_server/nginx/nginx.conf
@@ -2,7 +2,7 @@
 #History   2014_1_4_18_06   add virtual host 
 #		   2014_1_4_18_07   add php fastcgi
 #		   2014_1_8_14_28   add /admin duxcms backgroundsystem path
-#
+#		   2014_1_16_13_54  add /install duxcms path
 #user  nobody;
 worker_processes  1;
 
@@ -120,44 +120,45 @@ http {
         }
 	}
 
+	# add by JamesKid at 2014_1_16_13_57
 	server {
 		listen       80;
-		server_name  www.linuxduxcms.com;
+		server_name  www.duxcmst.com;
 		location / {
-			root   /var/www/duxcms;
-			index   index.php zsj.php;
-			  #if (-f $request_filename/index.html){
-			  #    rewrite (.*) $1/index.html break;
-			  #}
-			  #if (-f $request_filename/index.php){
-			  #    rewrite (.*) $1/index.php;
-			  #}
-			  # make by JamesKid add duxcms rewrite
-			  if (!-f $request_filename){
+			root   /var/www/duxcmst;
+			index   index.php;
+			if (!-f $request_filename){
 			      rewrite (.*) /index.php;
-			  }
-			  #
-			  #rewrite /wp-admin$ $scheme://$host$uri/ permanent;
-			  #
+			}
+			#if (!-e $request_filename){
+			#	rewrite ^/(.*)$ /index.php/$1 last;
+			#}
 		}
 		location /admin {
-			root /var/www/duxcms;
+			root /var/www/duxcmst;
 			index index.php index.html;
-
 			if (!-f $request_filename){
 			      rewrite (.*) /admin/index.php;
 			}
 		}
 
+		location /install {
+			root /var/www/duxcmst;
+			index index.php index.html;
+			if (!-f $request_filename){
+			      rewrite (.*) /install/index.php;
+			}
+		}
         location ~ \.php$ {
-            root           /var/www/duxcms ;
+            root           /var/www/duxcmst ;
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
 			include		   fcgi.conf;
         }
 
 	}
-
+	# JamesKid add end
+	
     # HTTPS server
     #
     #server {
